--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "eslint-plugin-html": "^5.0.5",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
